--- a/отчет.md
+++ b/отчет.md
@@ -2,7 +2,7 @@
 
 План:
 1.   Макет программы на С++
-2.   Разработка тестов для макета
+2.   Тесты для макета
 3.   Перевод макета на ассемблер RARS
 4.   Тестирование программы на ассемблере
 
@@ -18,96 +18,34 @@
 |- | + | - | -|
 |- | - | + | -|
 
-Основываясь на данном наблюдении была составлена следующая программа:
+Основываясь на данном наблюдении была составлена программа которую можно найти в файле c_plus_plus_version.cpp.
 
-```
-#include <iostream>
+## Тесты для макета
+Все тесты основаны на математических правилах деления реализованных в ЯП С++ и покрывают такие варианты входных данных как:
+- все варианты расстановки знаков для делителя и делимого основываясь на таблице из предыдущего раздела
+- деление большего по модулю числа на меньшее по модулю
+- деление меньшего по модулю числа на большее по модулю
+- деление на 0
+- деление 0 на число
+- деление 0 на 0
 
-int main()
-{
-    int remainder, divisor;
-    int quotient = 0;
-    int delta = 1; // дельта для получения знакового частного
-    bool negative_remainder = false;
+Собственно сами тесты представлены в таблице ниже.
 
-    // обмен любезностями или ввод данных
-    std::cout << "Enter dividend: ";
-    std::cin >> remainder;
-    std::cout << "Enter divisor: ";
-    std::cin >> divisor;
+| № |Делимое | Делитель | Частное | Остаток |
+|--- | --- | --- | ----| ---|
+|**1**| 15 | 6 | 2 | 3 |
+|**2**| 15 | -6 | -2 | 3 |
+|**3**| -15 | 6 | -2 | -3 |
+|**4**| -15 | -6 | 2 | -3 |
+|**5**|2|19|0|2|
+|**6**|2|-19|0|2|
+|**5**|-2|19|0|-2|
+|**6**|-2|-19|0|-2|
+|**7**|0|19|0|0|
+|**8**|0|-19|0|0|
+|**9**|10|0|Сообщение об ошибке|
+|**10**|0|0|Сообщение об ошибке|
 
-    // переменные в которых будет хранится результат от встроенного деления и взятия остатка
-    int real_res = 0;
-    int real_rem = 0;
+Все тесты пройдены успешно можно приступать к переводу этого чуда на асемблер RARS.
 
-    // проверяем делитель на равенство 0
-    if (divisor == 0) {
-        // в случае 0 посылаем в плохую концовку программы
-        goto badending;
-    }
-
-    // вычисляем правильный результат
-    real_res = remainder / divisor;
-    real_rem = remainder % divisor;
-
-    //начинаем шаманить
-
-    // если делимое меньше 0 остаток должен быть тоже меньше 0 и частное должно быть отрицательным
-    if (remainder < 0) {
-        // меняем знак делимого
-        remainder = 0 - remainder;
-        negative_remainder = true;
-        delta = 0 - delta;
-    }
-
-    // если делитель меньше 0 частное должно быть отрицательным только если делитель не отрицательный
-    if (divisor < 0) {
-        // меняем знак делителя
-        divisor = 0 - divisor;
-        delta = 0 - delta;
-    }
-
-    // если делить нечего пропускаем цикл
-    if (divisor > remainder) {
-        goto endloop;
-    }
-
-    // начинаем цикл деления двух положительных чисел
-    loop:
-    // собственно итерация деления
-    remainder = remainder - divisor;
-
-    // увеличиваем частное на знаковую дельту
-    quotient = quotient + delta;
-
-    // пока есть что делить делим
-    if (remainder >= divisor) {
-        goto loop;
-    }
-
-    // конец цикла
-    endloop:
-
-    // делаем остаток отрицательным при необходимости
-    if (negative_remainder) {
-        remainder = 0 - remainder;
-    }
-
-    // вывод того что получилось в результате шаманства
-    std::cout << "quotient: " << quotient << ", remainder: " << remainder << std::endl;
-    // вывод того что должно было получиться
-    std::cout << "real quotient: " << real_res << ", real remainder: " << real_rem;
-    return 0;
-
-    // плохая концовка с сообщением об ощибке деления на 0
-    badending:
-    std::cout << "Error, division by zero";
-    return 0;
-}
-
-```
-
-## Разработка тестов для макета
-
-
-
+## Перевод макета на ассемблер RARS
