--- a/homework2/отчет.md
+++ b/homework2/отчет.md
@@ -3,10 +3,10 @@
 План:
 1.   Макет программы на С++
 2.   Тесты для макета
-3.   Перевод макета с С++ на ассемблер RARS
+3.   Перевод макета с С++ на ассемблер
 4.   Тестирование программы на ассемблере
 
-## Макет программы на С++
+## 1. Макет программы на С++
 Разработку программы деления целых чисел было решено начать с составления макета программы на языке программирования C++, из-за более простого процесса разработки. Основная идея программы работать только с положительными числами, а все случаи с отрицательными числами приводить к положительным. 
 
 В процессе анализа работы операторов С++ были выявлены следующие зависимости: 
@@ -106,7 +106,7 @@ int main()
 
 ```
 
-## Тесты для макета
+## 2. Тесты для макета
 Все тесты основаны на математических правилах деления реализованных в ЯП С++ и покрывают такие варианты входных данных как:
 - все варианты расстановки знаков для делителя и делимого основываясь на таблице из предыдущего раздела
 - деление большего по модулю числа на меньшее по модулю
@@ -137,9 +137,9 @@ int main()
 |**15**|10|0|Сообщение об ошибке|
 |**16**|0|0|Сообщение об ошибке|
 
-Все тесты пройдены успешно можно приступать к переводу этого чуда на асемблер RARS.
+Все тесты пройдены успешно можно приступать к переводу этого чуда на асемблер.
 
-## Перевод макета с С++ на ассемблер RARS
+## 3. Перевод макета с С++ на ассемблер  
 В процессе перевод выяснилось, что условия из всех условных операторов исходной программы на с++ нужно инвертировать для того чтобы, при их выполнении программа пропускала действия "из тела условного оператора". Вот итоговая программа:
 
 ``` asm
@@ -229,3 +229,4 @@ int main()
         li	a7, 10 # окончание программы
         ecall
 ```
+## 4. Тестирование программы на ассемблере
