--- a/homework2/отчет.md
+++ b/homework2/отчет.md
@@ -140,7 +140,7 @@ int main()
 Все тесты пройдены успешно можно приступать к переводу этого чуда на асемблер.
 
 ## 3. Перевод макета с С++ на ассемблер  
-В процессе перевод выяснилось, что условия из всех условных операторов исходной программы на с++ нужно инвертировать для того чтобы, при их выполнении программа пропускала действия "из тела условного оператора". Вот итоговая программа:
+В процессе перевод выяснилось, что условия из всех условных операторов исходной программы на с++ нужно инвертировать для того чтобы, при их выполнении программа пропускала действия "из тела условного оператора". Вот итоговая программа (так же в файле assembler_ver.asm):
 
 ``` asm
 .data
@@ -230,3 +230,12 @@ int main()
         ecall
 ```
 ## 4. Тестирование программы на ассемблере
+Результаты тестирования программы в эмуляторе RARS:
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/4e824f31-d4b6-454b-93a8-97f53b2361d1)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/4f8cba3c-ae50-40b9-a1fd-423fad44df67)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/6d182b3c-76ea-4a7b-9435-ec5622668812)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/376ebab7-5f96-4da3-bc30-562ee07efa84)
+
+**Итог:** программа работает корректно🤩.
+
+![sticker](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/e5a48bb8-2a62-426d-83b2-d08c5ad27a1a)
