--- a/homework3/отчет.md
+++ b/homework3/отчет.md
@@ -20,7 +20,7 @@
 5. Вывести всю информацию про сумму
 
 ## 2. Собственно программа на ассемблере
-За основу была взята программа с семинара которая записывает в массив числа от 1 до n в зависимости от значения n, потому что здесь всё так же нужно ввести n в определенном диапазоне (от 1 до 10) и заполнить массив начальными значениями (только теперь введенными с клавиатуры). Также тут используются регистры s1 и s2 для хранения констант наибольшего и наименьшего возможных значений, из-за того что регистров t не хватило бы если бы онисохранялись там или записывались туда из памяти (про работу со стеком разговора на семинаре пока не было, поэтому работы со стеком тут не будет). 
+За основу была взята программа с семинара которая записывает в массив числа от 1 до n в зависимости от значения n, потому что здесь всё так же нужно ввести n в определенном диапазоне (от 1 до 10) и заполнить массив начальными значениями (только теперь введенными с клавиатуры). Также тут используются регистры s1 и s2 для хранения констант наибольшего и наименьшего возможных значений, из-за того что регистров t не хватило бы если бы онисохранялись там или записывались туда из памяти (про работу со стеком разговора на семинаре пока не было, поэтому сохранения того что было в s регистрах не будет, и кажется тут это не нужно тк, тут нет функций). 
 
 ``` asm
 .data
@@ -145,24 +145,25 @@ fail:
 
 ## 3. Тестирование программы
 
-| № |n | массив | Сумма | количество элементов |ошибка |
+Тесты:
+
+| № |n | массив | Сумма | количество элементов |сообщение об ошибке |
 |--- | --- | --- | ----| ---|--|
-|**1**| 0 |  |  |  |
-|**2**| 15 | -6 | -2 | 3 |
-|**3**| -15 | 6 | -2 | -3 |
-|**4**| -15 | -6 | 2 | -3 |
-|**5**| 15 | 5 | 3 | 0 |
-|**6**| 15 | -5 | -3 | 0 |
-|**7**| -15 | 5 | -3 | 0 |
-|**8**| -15 | -5 | 3 | 0 |
-|**9**|2|19|0|2|
-|**10**|2|-19|0|2|
-|**11**|-2|19|0|-2|
-|**12**|-2|-19|0|-2|
-|**13**|0|19|0|0|
-|**14**|0|-19|0|0|
-|**15**|10|0|Сообщение об ошибке|
-|**16**|0|0|Сообщение об ошибке|
+|**1**| 0 |  |  | |   неверное n|
+|**2**| 1 | 5 | 5 | 1 |✔|
+|**3**| 5 | 1 2 3 4 5 | 15 | 5 |✔|
+|**4**| 10 | 1 2 3 4 5 -1 -2 -3 -4 -6 | -1 | 10 |✔|
+|**5**| 11 | 1 2 3 4 5 6 7 8 9 10 11 |  |  |неверное n|
+|**6**| 2 | 2147483647 1| 2147483647 | 1 |переполнение|
+|**7**| 2 | -2147483648 -1| -2147483648 | 1 |переполнение|
+|**8**| 2 | 2147483646 1| 2147483647 | 2 |✔|
+|**9**| 2 | -2147483647 -1| -2147483648 | 2 |✔|
+
+Результаты выполнения:
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/1c746e8d-780e-4b58-981e-ccdcecc3799f)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/8b0f8e8a-a99b-4f9b-b49d-bdbbb67c506b)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/c103efb7-7f59-4531-a3ec-c454ad338354)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/fcb54dbc-a520-4adc-9fa6-d7e09db80735)
 
 **Итог:** программа работает корректно🤩.
 
