--- a/homework3/отчет.md
+++ b/homework3/отчет.md
@@ -4,6 +4,7 @@
 1.   Идея алгоритма
 2.   Собственно программа на ассемблере
 3.   Тестирование программы
+4.   Подсчет четных и нечетных чисел в массиве
 
 ## 1. Идея алгоритма
 Идея довольно простая: записать числа для сожения в массив, а потом пройти по нему и посчитать сумму. В случае переполнения завершить программу. В общем виде алгоритм выглядит так:
@@ -25,7 +26,7 @@
 ``` asm
 .data
 sep:    .asciz  "--------\n"    # Строка-разделитель (с \n и нулём в конце)
-prompt: .asciz  "n = ? "         # Подсказка для ввода числа
+prompt: .asciz  "how many elements are you going to summ? "         # Подсказка для ввода числа
 error:  .asciz  "incorrect n!\n"  # Сообщение о некорректном вводе
 overflow_error:  .asciz  "number overflow occured!\n"  # Сообщение о некорректном вводе
 correct_sum:	.asciz 	"sum: "
@@ -35,16 +36,15 @@ ln:	.asciz 	"\n"
 .align  2                       # Выравнивание на границу слова
 n:	.word	0		# Число введенных элементов массива
 array:  .space  40              # 64 байта
-
 .text
 in:
         la 	a0, prompt      # Подсказка для ввода числа элементов массива
         li 	a7, 4           
         ecall
         
-        li      a7 5            # вводим количество элементов в массиве
+        li      a7 5            # Системный вызов №5 — ввести десятичное число
         ecall
-        mv      t3 a0           
+        mv      t3 a0           # Сохраняем результат в t3 (это n)
         ble     t3 zero fail    # На ошибку, если меньше 0
         
         li      t4 10           # Максимальный размер массива
@@ -73,8 +73,9 @@ fill:
         lw	t3 n		# Число элементов массива
         la      t0 array
         li	t6 0 		#сумма
-        li	t5 0		# разница между суммой и границей (обнуляем здесь исключительно для того, чтобы понять какие регистры будут использоваться)
+        li	t5 0		# разница между суммой и границей
         li	t4 0		# счетчик просуммированных значений
+        li	t2 0		# счетчик четных элементов
         li	s1 2147483647   # максимальное положительное
         li	s2 -2147483648   # минимальное отрицательное
         
@@ -98,7 +99,7 @@ summ_proces:
         la 	a0, last       
         li 	a7, 4           
         ecall
-        jal	end
+        jal	end		
         
 	end_check:
 	
@@ -107,12 +108,11 @@ summ_proces:
 	addi    t0 t0 4         
         addi    t3 t3 -1        
         bnez    t3 summ_proces 
-        
-	
-		 
-        
+
+        lw	t3 n  
+        la      t0 array     
 end:
-	la 	a0, correct_sum       # выводим всю информацию про сумму
+	la 	a0, correct_sum       	# вывод всех данных
         li 	a7, 4           
         ecall
         mv	a0, t6
@@ -159,11 +159,91 @@ fail:
 |**8**| 2 | 2147483646 1| 2147483647 | 2 |✔|
 |**9**| 2 | -2147483647 -1| -2147483648 | 2 |✔|
 
-Результаты выполнения:
+Результаты выполнения (подсказка для ввода n поменялась в версии по подсчёту четных чисел, на скринах старая версия):
 ![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/1c746e8d-780e-4b58-981e-ccdcecc3799f)
 ![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/8b0f8e8a-a99b-4f9b-b49d-bdbbb67c506b)
 ![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/c103efb7-7f59-4531-a3ec-c454ad338354)
 ![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/fcb54dbc-a520-4adc-9fa6-d7e09db80735)
+
+**Итог:** программа работает корректно🤩.
+
+## 4. Подсчет чётных и нечётных чисел в массиве ✨
+Так как условие не сверкает полнотой будем считать, что нужно подсчитать все четные и нечётные числа в массиве, а не только те которые были просуммированы. Для этого в алгоритм достаточно вставить цикл который считает числа с нулевым остатком от деления на 2. А при выводе данных, когда мы выводим информацию о нечетных числах, вычесть количество чётных из полного количества элементов. В результате получаем такие модификации:
+
+```asm
+.data
+...
+even_elements:	.asciz	"number of even elements: "
+odd_elements:	.asciz	"number of odd elements: "
+...
+.text
+...
+	over_message:
+	la 	a0, overflow_error       # выводим сообщение об ошибке и выходим из цикла
+        li 	a7, 4           
+        ecall
+        la 	a0, last       
+        li 	a7, 4           
+        ecall
+        jal	even_count_process		# я не хочу делать спагетти-монстра поэтому четные числа считаем в отдельном цикле
+
+...
+
+even_count_process:		# цикл подсчета четных чисел
+	lw	t1 (t0)
+	li	t5, 2
+	rem	t5, t1, t5		# в условии ничего не говорилось про то, что нельзя использовать команду взятия остатка от деления
+	bnez 	t5, cont
+	addi	t2, t2, 1
+	
+	cont:
+	addi    t0 t0 4         
+        addi    t3 t3 -1        
+        bnez    t3 even_count_process 	 
+
+        lw	t3 n       
+end:
+...
+# тут был вывод информации про сумму
+        la 	a0, even_elements       
+        li 	a7, 4           
+        ecall
+        mv	a0, t2
+        li	a7, 1
+        ecall
+        la 	a0, ln       
+        li 	a7, 4           
+        ecall
+        
+        la 	a0, odd_elements       
+        li 	a7, 4           
+        ecall
+        sub	t2, t3, t2
+        mv	a0, t2
+        li	a7, 1
+        ecall
+        la 	a0, ln       
+        li 	a7, 4           
+        ecall    
+...
+```
+
+Тесты:
+| № |n | массив | кол-во чётных | кол-во нечётных |
+|--- | --- | --- | ----| ---|
+|**1**| 5 | 1 2 3 4 5 | 2 | 3|
+|**2**| 5 | -1 -2 -3 -4 -5 | 2 | 3 |
+|**3**| 5 | 2 4 6 8 0 | 5 | 0 |
+|**4**| 5 | 1 3 5 7 9 | 0 | 5 |
+|**6**| 2 | 2147483647 1| 0 | 2 |
+|**7**| 2 | -2147483648 -1| 1 | 1 |
+
+Результаты выполнения:
+
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/210e55ac-705d-4fd2-89f5-92f3fc398549)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/374bced4-fbaa-454d-b274-29655f435120)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/5a33faab-c316-4182-ba61-b665f3614abd)
+
 
 **Итог:** программа работает корректно🤩.
 
