--- a/homework4/отчет.md
+++ b/homework4/отчет.md
@@ -48,13 +48,60 @@ fact_max:
 
 **Итог:** программа работает корректно🤩.
 
-## 4. Программа на 10 ✨
+## 3. Программа на 10 ✨
+Рекурсивный алгоритм для данной задачи подразумевает вычисление факториала для каждого аргумента отдельно (иначе это была бы замена цикла на рекурсию). В данном алгоритме переиспользуется функция из предыдущего алгоритма fact_max, которач в цикле вызывает функцию подсчёта факториала (код из задачи с семинара) для следующего аргумента, если новое значение оказывается меньше предыдущего, значит произошло переполнение (в данной ситуации это верно).
+
+``` asm
+# вычисление максимальног аргумента факториала
+# Вызывающая программа
+        jal     fact_max           
+        li      a7 1		
+        ecall                  
+        li      a7 10
+        ecall
+# Подпрограмма вычисления факториала
+fact_max:   
+	li	t2, 2 # текущий аргумент
+	li	t3, 1 # прошлое значение факториала
+	for:
+		mv	a0, t2
+		jal fact 	# ищем факториал от нового аргумента
+		bltu   	a0, t3, end_for 	# если произошло переполнение следующее значение будет меньше чем текущее
+		mv	t3, a0
+		addi	t1, t1, 1
+		b	for
+	
+	end_for:
+	addi	a0, t1, -1
+        ret
+        
+
+fact:   addi    sp sp -4
+        sw      ra (sp)         # Сохраняем ra
+        mv      t1 a0           # Запоминаем N в t1
+        addi    a0 t1 -1        # Формируем n-1 в a0
+        li      t0 1
+        ble     a0 t0 done      # Если n<2, готово
+        addi    sp sp -4        ## Сохраняем t1 на стеке
+        sw      t1 (sp)         ##
+        jal     fact            # Посчитаем (n-1)!
+        lw      t1 (sp)         ## Вспоминаем t1
+        addi    sp sp 4         ##
+        mul     t1 t1 a0        # Домножаем на (n-1)!
+done:   mv      a0 t1           # Возвращаемое значение
+        lw      ra (sp)         # Восстанавливаем ra
+        addi    sp sp 4         # Восстанавливаем вершину стека
+        ret
+```
+
+## 4. Тестирование программы на 10
 
 | № |результат |
 |--- | --- |
 |**1**| 12 |  
 Результаты выполнения:
 
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/eb039a74-9ae8-4ac7-aba5-7f7394a4d1f8)
 
 
 **Итог:** программа работает корректно🤩.
