--- a/homework5/отчет.md
+++ b/homework5/отчет.md
@@ -21,6 +21,10 @@
 |**8**| 2 | 2147483646 1| 2147483647 | 2 |✔|
 |**9**| 2 | -2147483647 -1| -2147483648 | 2 |✔|
 
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/8e858fe1-799c-490c-b5bd-31a0c9af108d)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/dd08a1cd-78e6-4359-b8d4-69cda6a12633)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/ad953b60-b8ca-489f-b471-553e1342c0a9)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/130b13e3-e764-4aee-a6af-78cc87989b8b)
 
 **Итог:** программа работает корректно🤩.
 
@@ -40,10 +44,13 @@
 |**8**| 2 | 2147483646 1| 2147483647 | 2 |✔|
 |**9**| 2 | -2147483647 -1| -2147483648 | 2 |✔|
 Результаты выполнения:
-
-
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/8e858fe1-799c-490c-b5bd-31a0c9af108d)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/dd08a1cd-78e6-4359-b8d4-69cda6a12633)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/ad953b60-b8ca-489f-b471-553e1342c0a9)
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/130b13e3-e764-4aee-a6af-78cc87989b8b)
 
 
 **Итог:** программа работает корректно🤩.
 
-![sticker](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/e5a48bb8-2a62-426d-83b2-d08c5ad27a1a)
+![sticker](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/d260f1dd-3236-4b5e-9df7-104a092bd392)
+
