--- a/homework6/отчет.md
+++ b/homework6/отчет.md
@@ -5,19 +5,18 @@
 2.   Решение на 10
 
 ## 1. Решение на 8
-Сама подрограмма в файле strncpy.asm. В основной программе сначала запускается подпрограмма с исходными данными от пользователя, а потом прогоняются тесты
+Сама подрограмма в файле strncpy.asm. В основной программе сначала запускается подпрограмма с исходными данными от пользователя, а потом прогоняются тесты. 
+Так как в задании ничего не сказано про размер буфера, буфе будет под 100 символов + 1 на конец строки + 1 на перевод строки. Если число копируемых символов больше чем 102 символа, число копируемых символов уменьшается до 102. Проверить с помощью кода, что в буффер записались дополнительные символы конца строки (,если длина копирования больше чем длина исходной строки,) не будет представляться возможным, но это реализованно в коде. В консоли эти символы тоже выведены не будут, поэтому и в тестах они представлены не будут.
 
 | № |исходная строка | длина копирования | итоговая строка |
 |--- | --- | --- | ----|
-|**1**| 0 |  |  |
-|**2**| 1 | 5 | 5 |
-|**3**| 5 | 1 2 3 4 5 | 15 |
-|**4**| 10 | 1 2 3 4 5 -1 -2 -3 -4 -6 | -1 |
-|**5**| 11 | 1 2 3 4 5 6 7 8 9 10 11 |  |
-|**6**| 2 | 2147483647 1| 2147483647 |
-|**7**| 2 | -2147483648 -1| -2147483648 |
-|**8**| 2 | 2147483646 1| 2147483647 |
-|**9**| 2 | -2147483647 -1| -2147483648 |
+|**1**|  | 5 |  |
+|**2**| Hello world! | 0 |  |
+|**3**| Hello world! | 20 | Hello world! |
+|**4**| Hello world! | 5 | Hello |
+|**5**| This is a very loooooooooooong string, which is supposed to be longer than one hundred and one characters. | 50 | This is a very loooooooooooong string, which is su |
+|**6**| This is a very loooooooooooong string, which is supposed to be longer than one hundred and one characters. | 110 | This is a very loooooooooooong string, which is supposed to be longer than one hundred and one charact |
+|**7**| This is a very loooooooooooong string, which is supposed to be longer than one hundred and one characters. | -1 |  |
 
 
 
