--- a/homework6/отчет.md
+++ b/homework6/отчет.md
@@ -18,6 +18,7 @@
 |**6**| This is a very loooooooooooong string, which is supposed to be longer than one hundred and one characters. | 110 | This is a very loooooooooooong string, which is supposed to be longer than one hundred and one charact |
 |**7**| This is a very loooooooooooong string, which is supposed to be longer than one hundred and one characters. | -1 |  |
 
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/8f3de199-cec5-4bd6-8df6-2aabb5c61551)
 
 
 **Итог:** программа работает корректно🤩.
