--- a/homework6/отчет.md
+++ b/homework6/отчет.md
@@ -24,23 +24,11 @@
 **Итог:** программа работает корректно🤩.
 
 ## 4. Решение на 10 ✨
-Решение на 10 предоставлено в папке *на 10*. Там нет файлов с подпрограммами потому что они там не используются т.к. они заменены библиотекой макросов.
-
-Аналогичные тесты:
-| № |n | массив | Сумма | количество элементов |сообщение об ошибке |
-|--- | --- | --- | ----| ---|--|
-|**1**| 0 |  |  | |   неверное n|
-|**2**| 1 | 5 | 5 | 1 |✔|
-|**3**| 5 | 1 2 3 4 5 | 15 | 5 |✔|
-|**4**| 10 | 1 2 3 4 5 -1 -2 -3 -4 -6 | -1 | 10 |✔|
-|**5**| 11 | 1 2 3 4 5 6 7 8 9 10 11 |  |  |неверное n|
-|**6**| 2 | 2147483647 1| 2147483647 | 1 |переполнение|
-|**7**| 2 | -2147483648 -1| -2147483648 | 1 |переполнение|
-|**8**| 2 | 2147483646 1| 2147483647 | 2 |✔|
-|**9**| 2 | -2147483647 -1| -2147483648 | 2 |✔|
+Макрос находится в macrolib.s, тестирование аналогичное.
 
 Результаты выполнения:
 
+![image](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/f909196b-bdb2-46e4-88ef-6ea8d38012db)
 
 
 **Итог:** программа работает корректно🤩.
