--- a/homework8/отчёт.md
+++ b/homework8/отчёт.md
@@ -8,6 +8,6 @@
 |10000000| 1| 36903 |
 |10000000| 4| 66460 |
 
-В целом получается что потоки дольше создаются и собираются вместе чем отрабатывает цикл проходящийся по всем чисам от 0 до 10000000 не включительно.
+В целом получается что потоки дольше создаются и собираются вместе чем отрабатывает цикл проходящийся по всем числам от 0 до 10000000 не включительно.
 
 ![sticker](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/d260f1dd-3236-4b5e-9df7-104a092bd392)
