--- a/homework8/отчёт.md
+++ b/homework8/отчёт.md
@@ -1,13 +1,18 @@
 # Домашняя работа 8
 
+## Условие
+
+
 
 ## 1. Решение на 8
-Я уверенна что программу вы найдёте))).
+Я уверенна что программу вы найдёте))). \
+В моём понимании условия так как элементы векторов А и В задаются формулами относительно их индекса в векторе, у нас нет необходимости хранить эти вектора в виде массивов.
+
 |Число элементов в векторе| Число потоков| Время выполнения |
 |-------------------------|--------------|-|
 |10000000| 1| 36903 |
 |10000000| 4| 66460 |
 
-В целом получается что потоки дольше создаются и собираются вместе чем отрабатывает цикл проходящийся по всем числам от 0 до 10000000 не включительно.
+В целом получается что потоки дольше создаются и собираются вместе чем отрабатывает цикл проходящийся по всем числам от 0 до 10000000 не включительно. Но вероятно на больших набрах данных несколько параллельных потоков будут вычислять произведение быстрее.
 
 ![sticker](https://github.com/MShpiz/Homework_for_ACS/assets/88736099/d260f1dd-3236-4b5e-9df7-104a092bd392)
